implemeted monitoring missed blocks for a month #LSC-87
